--- a/src/styles/layouts/_loopstudios.scss
+++ b/src/styles/layouts/_loopstudios.scss
@@ -12,4 +12,8 @@
     &__header {
         grid-column: page-start / page-end;
     }
+
+    &__main {
+        grid-column: content-start / content-end;
+    }
 }
