--- a/src/styles/elements/_typography.scss
+++ b/src/styles/elements/_typography.scss
@@ -4,14 +4,29 @@ h1,
 h2,
 h3 {
     font-family: var(--main-font), sans-serif;
+    font-weight: 300;
+    line-height: 1;
+    text-transform: uppercase;
 }
 
 h1 {
-    font-weight: 300;
     font-size: clamp(t.rem(40),
             1.795774647887324rem + 3.004694835680751vw,
             t.rem(72));
-    line-height: 0.95;
-    text-transform: uppercase;
     color: #fff;
+}
+
+h2 {
+    font-size: clamp(t.rem(32),
+            1.647887323943662rem + 1.5023474178403755vw,
+            t.rem(48));
+    color: #000;
+}
+
+p {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.67;
+    color: #000;
+    opacity: 0.5;
 }
