--- a/src/styles/layouts/_creations.scss
+++ b/src/styles/layouts/_creations.scss
@@ -1,5 +1,82 @@
 @use "../tools" as t;
 
 .l-creations {
-    
+    display: grid;
+    grid-template-areas: "title"
+        "list"
+        "btn";
+    gap: 48px;
+    padding-block-end: 100px;
+    place-items: center;
+
+    &__headline {
+        grid-area: title;
+    }
+
+    &__list {
+        grid-area: list;
+        inline-size: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(min(100%, 255px), 1fr));
+        gap: 30px;
+    }
+
+    &__item {
+        display: grid;
+        grid-template-areas: "card";
+        position: relative;
+    }
+
+    &__item::after {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%);
+    }
+
+    &__title {
+        grid-area: card;
+        position: absolute;
+        left: 5%;
+        bottom: 10%;
+        z-index: 1;
+
+        @include t.breakpoint(s) {
+            left: 10%;
+        }
+    }
+
+    &__picture {
+        grid-area: card;
+    }
+
+    &__picture img {
+        block-size: auto;
+        inline-size: 100%;
+        object-fit: cover;
+        object-position: bottom;
+    }
+
+    &__btn {
+        grid-area: btn;
+        border: 1px solid #000;
+        padding: 13px 43px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1;
+        letter-spacing: 0.36em;
+        text-transform: uppercase;
+        color: #000;
+    }
+
+    &__btn:hover {
+        background-color: #000;
+        color: #fff;
+    }
+
+    @include t.breakpoint(s) {
+        grid-template-areas: "title btn"
+            "list list";
+        justify-content: space-between;
+    }
 }
